--- a/_pages/404.html
+++ b/_pages/404.html
@@ -5,11 +5,10 @@ permalink: /404.html
 ---
 
 <div class="notfound">
-  <h1 class="notfound-error">404: Page not found</h1>
+  <h1 class="notfound-error">404: Seite nicht gefunden</h1>
   <div class="notfound-line"></div>
   <p class="notfound-message">
-    Oops! We can't seem to find the page you are looking for. Let's
-    <a href="{{ site.baseurl }}/">head back home</a>.
+    Oops! Wir können die Seite, die Du suchst, nicht finden. Kehre doch <a href="{{ site.baseurl }}/">zur Startseite zurück</a>.
   </p>
   <p></p>
 </div>
