--- a/_pages/404.html
+++ b/_pages/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="notfound">
   <h1 class="notfound-error">404</h1>
-  <h3>Seite nicht gefunden</h3>
+  <h3 class="notfound-error">Seite nicht gefunden</h3>
   <div class="notfound-line"></div>
   <p class="notfound-message">
     Oops! Wir können die Seite, die Du suchst, nicht finden. Kehre doch <a href="{{ site.baseurl }}/">zur Startseite zurück</a>.
