--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -14,7 +14,7 @@ permalink: /kontakt/
                     <input type="text" name="Name" class="form-control" placeholder="Name" required>
                 </div>
                 <div class="col">
-                    <input type="email" name="E-Mail" class="form-control" placeholder="EMmail-Adresse" required>
+                    <input type="email" name="E-Mail" class="form-control" placeholder="E-Mail-Adresse" required>
                 </div>
             </div>
         </div>
