--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -19,6 +19,7 @@ permalink: /kontakt/
             </div>
         </div>
         <div class="form-group">
+            <input type="text" name="Betreff" class="form-control" placeholder="Betreff" required>
             <textarea placeholder="Deine Nachricht" class="form-control" name="Nachricht" rows="10" required></textarea>
         </div>
         <button type="submit" class="btn btn-lg btn-dark btn-block">Senden</button>
