--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -19,9 +19,13 @@ permalink: /kontakt/
             </div>
         </div>
         <div class="form-group">
-            <input type="text" name="Betreff" class="form-control" placeholder="Betreff" required>
-            <textarea placeholder="Deine Nachricht" class="form-control" name="Nachricht" rows="10" required></textarea>
-            <input type="file" name="Anhang">
+            <div class="form-row">
+                <div class="col">
+                    <input type="text" name="Betreff" class="form-control" placeholder="Betreff" required>
+                    <textarea placeholder="Deine Nachricht" class="form-control" name="Nachricht" rows="10" required></textarea>
+                    <input type="file" name="Anhang">
+                </div>
+            </div>
         </div>
         
         <input type="text" name="_honey" style="display:none">
