--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -11,9 +11,9 @@ permalink: /kontakt/
 <style>
 .form-control {
   width: 100%;
-  padding: 12px;
+  padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 1px;
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
@@ -25,8 +25,10 @@ permalink: /kontakt/
   color: white;
   padding: 12px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 1px;
   cursor: pointer;
+  margin-top: 6px;
+  margin-bottom: 16px;
 }
 
 .submit-button:hover {
@@ -34,7 +36,7 @@ permalink: /kontakt/
 }
 
 .container {
-  padding: 20px;
+  padding: 10px;
 }
 </style>
 
