--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -19,6 +19,17 @@ permalink: /kontakt/
   margin-bottom: 16px;
   resize: vertical;
 }
+  
+  .file-upload {
+  border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+  }
+  
+  input[type="file"] {
+    display: none;
+}
 
 .submit-button {
   background-color: #04AA6D;
@@ -27,7 +38,7 @@ permalink: /kontakt/
   border: none;
   border-radius: 1px;
   cursor: pointer;
-  margin-top: 6px;
+  margin-top: 24px;
   margin-bottom: 16px;
 }
 
@@ -51,8 +62,9 @@ permalink: /kontakt/
      <input type="text" name="Betreff" class="form-control" placeholder="Betreff" required>
 
     <textarea placeholder="Deine Nachricht" class="form-control" name="Nachricht" rows="10" required></textarea>
-    
-    <input type="file" name="Anhang">
+    <label class="file-upload">
+      <input type="file" name="Anhang">
+    </label>
     
     <input type="text" name="_honey" style="display:none">
         <input type="hidden" name="_subject" value="Kontakt ‚De Rebus‘">
