--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -23,7 +23,7 @@ permalink: /kontakt/
   .file-upload {
   border: 1px solid #ccc;
     display: inline-block;
-    padding: 6px 12px;
+    padding: 3px 6px;
     cursor: pointer;
   }
   
@@ -65,7 +65,7 @@ permalink: /kontakt/
     
     <label class="file-upload">
       <input type="file" name="Anhang">
-      Anhang
+      Dateien hochladen
     </label>
     
     <input type="text" name="_honey" style="display:none">
