--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -27,7 +27,7 @@ permalink: /kontakt/
     <input type="hidden" name="_next" value="./kontakt-erfolg.html">
     
     <div>
-      <button type="submit" class="submit-button">Senden</button>
+      <button type="submit" class="submit-button">SENDEN</button>
     </div>
   </form>
 </div>
