--- a/_pages/kontakt-erfolg.html
+++ b/_pages/kontakt-erfolg.html
@@ -1,1 +1,15 @@
-<p>Yes.</p>
+---
+layout: default
+title: "Abgeschickt!"
+permalink: /kontakt-erfolg.html
+---
+
+<div class="c-success">
+  <h1 class="c-success-title">{{ page.title }}</h1>
+  <h1>Das Formular wurde erfolgreich gesendet.</h1>
+  <div class="c-success-line"></div>
+  <p class="c-success-message">
+    Schön, dass Du mir etwas mitteilen möchtest. Ich komme bald auf Dich zurück. Bis dahin lies doch ein paar <a href="{{ site.baseurl }}/">Posts</a>.
+  </p>
+  <p></p>
+</div>
