--- a/_pages/kontakt.html
+++ b/_pages/kontakt.html
@@ -21,7 +21,7 @@ permalink: /kontakt/
      
     <input type="text" name="Betreff" class="form-control" placeholder="Betreff*" required>
 
-    <textarea placeholder="Deine Nachricht" class="form-control" name="Nachricht" rows="10" required></textarea>
+    <textarea placeholder="Deine Nachricht*" class="form-control" name="Nachricht" rows="10" required></textarea>
     
     <label class="file-upload">
       <input type="file" name="Anhang" style="display:none">
