--- a/_pages/archiv.html
+++ b/_pages/archiv.html
@@ -12,8 +12,8 @@ permalink: /archiv/
   </div>
   
   <div class="tags-clouds">
-    {% for tag in site.tags %}
-    <a href="#{{ tag[0] }}">{{ tag[0] }}</a>
+    {% for post in site.posts %}
+    <a href="#{{ post[0] }}">{{ post[0] }}</a>
     {% endfor %}
   </div>
   
@@ -53,18 +53,18 @@ permalink: /archiv/
 
     {% if forloop.first %}
     <h2 id="{{ this_year }}-ref">{{this_year}}</h2>
-    <ul>
+    <div>
     {% endif %}
 
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <div><a href="{{ post.url }}">{{ post.title }}</a></div>
 
     {% if forloop.last %}
-    </ul>
+    </div>
     {% else %}
         {% if this_year != next_year %}
-        </ul>
+        </div>
         <h2 id="{{ next_year }}-ref">{{next_year}}</h2>
-        <ul>
+        <div>
         {% endif %}
     {% endif %}
 {% endfor %}
