--- a/_pages/archiv.html
+++ b/_pages/archiv.html
@@ -40,13 +40,13 @@ permalink: /archiv/
 
 
 
-<div>
+<div class="tags-item">
   {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 
     {% if forloop.first %}
-    <h2 id="{{ this_year }}-ref">{{this_year}}</h2>
+    <h2 class="tags-item-label" id="{{ this_year }}">{{this_year}}</h2>
     <div>
     {% endif %}
       
