--- a/_pages/archiv.html
+++ b/_pages/archiv.html
@@ -11,8 +11,18 @@ permalink: /archiv/
     <div class="tags-header-line"></div>
   </div>
   <div class="tags-clouds">
-    {% for tag in site.tags %}
-    <a href="#{{ tag[0] }}">{{ tag[0] }}</a>
+    {% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+      {% if forloop.first %}
+        <a href="#{{this_year}}">{{this_year}}</a>
+      {% endif %}
+      {% if forloop.last %}
+      {% else %}
+        {% if this_year != next_year %}
+          <a href="#{{next_year}}">{{next_year}}</a>
+        {% endif %}
+      {% endif %}
     {% endfor %}
   </div>
 
