--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -16,6 +16,7 @@ permalink: /tags/
   </div>
   {% for tag in site.tags %}
   <div class="tags-item" id="{{ tag[0] }}">
+    <i class="ri-price-tag-3-line"></i>
     <svg
       class="tags-item-icon"
       xmlns="http://www.w3.org/2000/svg"
