--- a/_pages/archiv.html
+++ b/_pages/archiv.html
@@ -52,6 +52,7 @@ permalink: /archiv/
       {% else %}
         {% if this_year != next_year %}
         </div>
+          <i class="ri-calendar-line"></i>
           <h2 class="tags-item-label" id="{{ next_year }}">{{next_year}}</h2>
         <div>
         {% endif %}
